<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchHospitalAndPharmacyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/search_hospital_pharmacy_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/search_hospital_pharmacy_location_back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_black_24dp"
                    android:background="@android:color/white"
                    android:onClick="clickBackBtn"/>

                <TextView
                    android:id="@+id/search_hospital_pharmacy_location_top_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_hospital_pharmacy_top_title"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="25dp"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/search_hospital_pharmacy_first_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="8dp"/>

            <ImageButton
                android:id="@+id/btn_search_hospital_pharmacy_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_hospital_pharmacy_first_line"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_search_black_24dp"
                android:background="@android:color/white"
                android:layout_marginRight="8dp"
                android:onClick="clickBtn"/>

            <EditText
                android:id="@+id/et_search_hospital_pharmacy_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_hospital_pharmacy_first_line"
                android:layout_toLeftOf="@id/btn_search_hospital_pharmacy_search"
                android:padding="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/search_hospital_pharmacy_et_hint"
                android:maxLines="1"
                android:inputType="text"/>

            <View
                android:id="@+id/search_hospital_pharmacy_second_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/et_search_hospital_pharmacy_search"/>

            <ListView
                android:id="@+id/list_search_hospital_pharmacy_location_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/search_hospital_pharmacy_second_line"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/tv_search_hospital_pharmacy_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/search_hospital_pharmacy_second_line"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:text="@string/search_hospital_pharmacy_tv_empty"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>