<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">
            
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/frag_health_info_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/frag_health_info_top_title_tv"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/frag_health_info_relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/frag_health_info_web_search_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/frag_health_info_web_search_tv"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/frag_health_info_web_search_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_black_24dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/frag_health_info_web_search_tv"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:clickable="true"/>

            <EditText
                android:id="@+id/frag_health_info_web_search_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frag_health_info_web_search_tv"
                android:layout_toLeftOf="@id/frag_health_info_web_search_iv"
                android:background="@drawable/chat_et_bg"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:inputType="text"
                android:lines="1"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/frag_health_info_youtube_search_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_below="@id/frag_health_info_web_search_et"
                android:text="@string/frag_health_info_youtube_search_tv"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/frag_health_info_youtube_search_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_black_24dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/frag_health_info_youtube_search_tv"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:clickable="true"/>

            <EditText
                android:id="@+id/frag_health_info_youtube_search_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frag_health_info_youtube_search_tv"
                android:layout_toLeftOf="@id/frag_health_info_youtube_search_iv"
                android:background="@drawable/chat_et_bg"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:inputType="text"
                android:lines="1"
                android:padding="8dp"/>


            <View
                android:id="@+id/frag_health_info_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@id/frag_health_info_youtube_search_et"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"/>

            <!--     들어가야 할 내용
       1. -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frag_health_info_youtube_info_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/frag_health_info_line"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"/>

        </RelativeLayout>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>